--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^16.4.1",
     "jquery": "^3.7.1",
     "jquery-jpostal-ja": "^2.14.40",
+    "node-sass": "^9.0.0",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
