--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
   "description": "This is maps app",
   "keywords": [],
   "website": "",
-  "repository": "https://github.com/takokke/bookers2.git",
+  "repository": "https://github.com/takokke/beetle_maps.git",
   "env": {},
   "addons": [
     "heroku-postgresql:hobby-dev"
