--- a/config/database.yml
+++ b/config/database.yml
@@ -2,7 +2,10 @@ default: &default
   adapter: postgresql
   encoding: unicode
   pool: 5
+  host: db
+  username: postgres
   timeout: 5000
+  password: password
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
@@ -19,3 +22,4 @@ production:
   username: beetle_maps
   password: <%= ENV['DATABASE_PASSWORD'] %>
   host: <%= ENV['DATABASE_HOST'] %>
+
