--- a/config/database.yml
+++ b/config/database.yml
@@ -2,9 +2,12 @@ default: &default
   adapter: postgresql
   encoding: unicode
   pool: 5
+  host: db
+  username: postgres
   timeout: 5000
   password: password
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+
 
 development:
   <<: *default
